# truss2d

./: .gitignore  CMakeLists.txt  LICENSE  README.md  all.bash
data/tlfem-validations/: bhatti_example_1dot4.py  three_member_truss.py
examples/: CMakeLists.txt  bhatti_example_1dot4.cpp  ex_three_member_truss.cpp
src/: CMakeLists.txt  libtruss2d.h
src/check/: CMakeLists.txt  README.md  check.h  z_test_equal_scalars.cpp  z_test_equal_vectors.cpp
src/lib/: CMakeLists.txt  truss2d.cpp  truss2d.h  z_test_truss2d.cpp
src/util/: CMakeLists.txt  printing.h  z_test_printing.cpp
zscripts/: FindLACLIB.cmake
